# i2cselect

./: Makefile  Makefile.am  README.md  autogen.sh  configure.ac  i2cselect-example.conf  i2cselect.c
debian/: changelog  control  copyright  i2cselect-docs.docs  i2cselect-examples.examples
doc/: Makefile.am  README
examples/: Makefile.am  i2cselect-example.conf
include/: pidfile.c
man/: Makefile.am  i2cselect.1  i2cselect.8
shared/: i2cselect-example.conf
src/: Makefile.am  i2cselect.c  user_shortcuts.h
